# Desafio-3

./: .gitignore  CMakeLists.txt  Fisica.h  Informe de responsabilidades Desafíos Info II (4).docx  MarvelBoxing.pro  Momento_II_v2.docx  NivelDosCenital.h  Objeto.h  README.md  momento I.docx  resources.qrc
src/: AgenteInteligente.cpp  Efecto.cpp  Efecto.h  Fisica.cpp  GameWidget.cpp  GameWidget.h  GestorNivel.cpp  GestorNivel.h  MainWindow.cpp  MainWindow.h  NivelDosCenital.cpp  Objeto.cpp  SistemaCombate.cpp  main.cpp
src/model/: AgenteInteligente.cpp  AgenteInteligente.h  Control.cpp  Control.h  Enums.h  GestorNivel.cpp  Objeto.cpp  Objeto.h  Personaje.cpp  Personaje.h  Plataforma.cpp  Plataforma.h  SistemaCombate.cpp  SistemaCombate.h  Vector2D.h
src/model/niveles/: NivelBase.h  NivelDosCenital.cpp  NivelUnoLunar.cpp  NivelUnoLunar.h
